--- a/src/main/resources/templates/categoria/categorias-add.html
+++ b/src/main/resources/templates/categoria/categorias-add.html
@@ -20,8 +20,8 @@
 
         <div class="mb-3">
             <label for="padre" class="form-label">Categoría Padre</label>
-            <select th:field="*{padre}" class="form-control">
-                <option th:each="c : ${categorias}" th:value="${c}" th:text="${c.nombre}"></option>
+            <select th:field="*{padre.id}" class="form-control">
+                <option th:each="c : ${categorias}" th:value="${c.id}" th:text="${c.nombre}"></option>
             </select>
         </div>
 
