--- a/src/main/resources/templates/camiseta/create.html
+++ b/src/main/resources/templates/camiseta/create.html
@@ -49,6 +49,14 @@
             <input type="number" step="0.01" th:field="*{precio}" class="form-control" placeholder="Ej: 19.99"/>
         </div>
 
+        <!-- Categoría -->
+        <div class="mb-3">
+            <label for="categoria" class="form-label">Categoría</label>
+            <select th:field="*{categoria.id}" class="form-control">
+                <option th:each="cat : ${categorias}" th:value="${cat.id}" th:text="${cat.nombre}"></option>
+            </select>
+        </div>
+
         <!-- Botones -->
         <button type="submit" class="btn btn-success">Guardar</button>
         <a th:href="@{/admin/camiseta}" class="btn btn-secondary">Cancelar</a>
