--- a/src/main/resources/templates/camiseta/edit.html
+++ b/src/main/resources/templates/camiseta/edit.html
@@ -57,6 +57,23 @@
             <input type="number" step="0.01" th:field="*{precio}" class="form-control"/>
         </div>
 
+        <!-- Categoría -->
+        <div class="mb-3">
+            <label for="categoria" class="form-label">Categoría</label>
+            <select th:field="*{categoria.id}" class="form-control">
+                <option value="" th:text="'Sin categoría'"></option>
+                <option th:each="cat : ${categorias}"
+                        th:value="${cat.id}"
+                        th:text="${cat.nombre}"
+                        th:selected="${cat.id} == ${camiseta.categoria?.id}">
+                </option>
+            </select>
+        </div>
+
+
+
+
+
         <!-- Botones -->
         <button type="submit" class="btn btn-success">Actualizar</button>
         <a th:href="@{/admin/camiseta}" class="btn btn-secondary">Cancelar</a>
