--- a/src/main/resources/templates/camiseta/user/list.html
+++ b/src/main/resources/templates/camiseta/user/list.html
@@ -6,9 +6,8 @@
     <nav th:replace="~{fragmentos/generar.html :: navegacion}"></nav>
 
     <h2>Listado de Camisetas</h2>
-    <a class="btn btn-primary mb-3" th:href="@{/admin/camiseta/add}">Añadir Camiseta</a>
 
-    <form th:action="@{/admin/camiseta}" method="get" class="mb-3">
+    <form th:action="@{/camiseta}" method="get" class="mb-3">
         <label for="categoriaId" class="form-label">Filtrar por categoría:</label>
         <select name="categoriaId" id="categoriaId" class="form-control" onchange="this.form.submit()">
             <option value="" th:text="'Todas'"></option>
@@ -46,8 +45,8 @@
             <td th:text="${c.precio}"></td>
             <td th:text="${c.categoria != null ? c.categoria.nombre : '---'}"></td>
             <td>
-                <a th:href="@{/admin/camiseta/edit/{id}(id=${c.id})}" class="btn btn-warning btn-sm">Editar</a>
-                <a th:href="@{/admin/camiseta/delete/{id}(id=${c.id})}" class="btn btn-danger btn-sm">Borrar</a>
+                <!--<a th:href="@{/admin/camiseta/delete/{id}(id=${c.id})}" class="btn btn-danger btn-sm">Borrar</a>-->
+                <a class="btn btn-primary mb-3">Comprar</a>
             </td>
         </tr>
         </tbody>
