--- a/src/main/resources/templates/fragmentos/generar.html
+++ b/src/main/resources/templates/fragmentos/generar.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es">
+<html lang="es" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="headfiles">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,23 +13,62 @@
     <div>
         <nav th:fragment="navegacion" class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Menu</a>
+                <a class="navbar-brand" href="/camiseta">Menu</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/admin/camiseta">Camiseta</a>
+                            <a class="nav-link active" aria-current="page" href="/camiseta">Camiseta</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin/provincia">Provincias</a>
+                            <a class="nav-link active" href="/provincia">Provincias</a>
+                        </li>
+
+                        <!-- Falta esto por hacer -->
+
+                        <li>
+                            <a class="nav-link active" href="/carro">Carro</a>
+                        </li>
+                        <li>
+                            <a class="nav-link active" href="/pedidos">Pedidos</a>
+                        </li>
+                        <li>
+                            <a sec:authorize="hasAuthority('ADMIN')" class="nav-link active" href="/carro">Gestionar Pedidos</a>
+                        </li>
+
+                        <!-- Hasta aquí -->
+
+                        <li sec:authorize="hasAuthority('ADMIN')" class="nav-item">
+                            <a class="nav-link active" href="/admin/camiseta">Gestionar camisetas</a>
+                        </li>
+                        <li sec:authorize="hasAuthority('ADMIN')" class="nav-item">
+                            <a class="nav-link active" href="/admin/provincia">Gestionar provincias</a>
+                        </li>
+                        <li sec:authorize="hasAuthority('ADMIN')" class="nav-item">
+                            <a class="nav-link active" href="/admin/categoria">Gestionar categorías</a>
+                        </li>
+                    </ul>
+
+
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                        <span class="navbar-text">
+                            Usuario: <span sec:authentication="name"></span>
+                        </span>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin/categoria">Categorias</a>
+                            <form th:action="@{/logout}" method="post" class="d-inline">
+                                <button type="submit" class="btn btn-outline-danger btn-sm ms-2">
+                                    Cerrar sesión
+                                </button>
+                            </form>
                         </li>
                     </ul>
                 </div>
+
             </div>
         </nav>
         <footer th:fragment="footer">
