--- a/src/main/resources/templates/provincia/create.html
+++ b/src/main/resources/templates/provincia/create.html
@@ -33,7 +33,7 @@
 
             <div class="mb-3">
                 <button type="submit" class="btn btn-success">Enviar</button>
-                <button type="reset" class="btn btn-danger">Cancelar</button>
+                <a th:href="@{/admin/provincia}" class="btn btn-danger">Cancelar</a>
             </div>
         </form>
 
