Implementación de gestión de pedidos y otros arreglos. Falta crear un apartado al usuario para meter sus direcciones y que en carro y pedido ponga la dirección o la edite.

--- a/src/main/resources/templates/fragmentos/generar.html
+++ b/src/main/resources/templates/fragmentos/generar.html
@@ -36,7 +36,7 @@
                             <a class="nav-link active" href="/pedidos">Pedidos</a>
                         </li>
                         <li>
-                            <a sec:authorize="hasAuthority('ADMIN')" class="nav-link active" href="/carro">Gestionar Pedidos</a>
+                            <a sec:authorize="hasAuthority('ADMIN')" class="nav-link active" href="/admin/pedido">Gestionar Pedidos</a>
                         </li>
 
                         <!-- Hasta aquí -->
