Implementación de la zona usuario, dirección ya esta hecho y código postal también. Falta hacer que en el carro puedas seleccionar una dirección de ese usuario y si no se selecciona que no se pueda hacer el pedido.

--- a/src/main/resources/templates/fragmentos/generar.html
+++ b/src/main/resources/templates/fragmentos/generar.html
@@ -26,9 +26,6 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="/provincia">Provincias</a>
                         </li>
-
-                        <!-- Falta esto por hacer -->
-
                         <li>
                             <a class="nav-link active" href="/carro">Carro</a>
                         </li>
@@ -36,11 +33,11 @@
                             <a class="nav-link active" href="/pedidos">Pedidos</a>
                         </li>
                         <li>
+                            <a class="nav-link active" href="/usuario">Zona usuario</a>
+                        </li>
+                        <li>
                             <a sec:authorize="hasAuthority('ADMIN')" class="nav-link active" href="/admin/pedido">Gestionar Pedidos</a>
                         </li>
-
-                        <!-- Hasta aquí -->
-
                         <li sec:authorize="hasAuthority('ADMIN')" class="nav-item">
                             <a class="nav-link active" href="/admin/camiseta">Gestionar camisetas</a>
                         </li>
